[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id=1]

[node name="Hud" type="CanvasLayer"]
script = ExtResource(1)

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.32
anchor_bottom = 0.02
offset_top = 0.0
offset_bottom = 24.0
value = 100

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.7
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.02
offset_bottom = 24.0
text = "Score: 0"
horizontal_alignment = 2

[node name="DialogPanel" type="PanelContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.78
anchor_right = 0.42
anchor_bottom = 0.95

[node name="DialogLabel" type="RichTextLabel" parent="DialogPanel"]
fit_content = true
text = ""
